# SeedClaw

./: LICENSE  README.md
SeedClaw/: .gitignore  CMakeLists.txt  README.md  nanoclaw_full_spec.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.seeed_xiao_esp32c3
SeedClaw/.claude/: settings.json  settings.local.json
SeedClaw/src/: CMakeLists.txt  cli.c  cli.h  discord.c  discord.h  gpio_ctrl.c  gpio_ctrl.h  llm.c  llm.h  secrets.h  seedclaw.c  seedclaw_config.h  tools.c  tools.h  wifi.c  wifi.h
